# n-grams-wikipedia

./: .gitattributes  .gitignore  LICENSE.md  README.md  download_corpus.sh  pyproject.toml  setup.sh
models/n_gram/: .gitattributes  wikipedia_bigram.db  wikipedia_trigram.db
src/n-grams-wikipedia/: naive_count.py
src/n_grams_wikipedia/: build_model.py  naive_count.py  query_model.py
