[project]
name = "n-grams-wikipedia"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
packages = [{ include = "n-grams-wikipedia", from = "src" }]
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

